# private-model-orchestrator

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  ENTERPRISE_FEATURES.md  GETTING_STARTED.md  LICENSE  LICENSE.COMMERCIAL  PRIVACY.md  README.de.md  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  SKELETON.md  TEMPLATE_NOTES.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  scorecard.yml
docs/: aot_conversion.md  api_reference.md  mdm_integration.md
examples/: device_group.rs  model_packaging.rs
pmo-cli/: Cargo.toml
pmo-cli/src/: main.rs
pmo-core/: Cargo.toml
pmo-core/src/: device.rs  ffi.rs  ffi_storage.rs  lib.rs  model.rs  policy.rs  policy_watch.rs  profiler.rs  quota.rs  storage.rs
pmo-core/tests/swift_bridge/: main.swift
pmo-macos/: Info.plist  Package.swift
pmo-macos/Sources/PMOMacOS/: AppModel.swift  AppSection.swift  ContentView.swift  PMOMacOSApp.swift
pmo-macos/Sources/PMOMacOS/Views/: DevicesView.swift  ModelsView.swift  PolicyView.swift  QuotasView.swift
pmo-macos/scripts/: build.sh  bundle.sh  generate-bindings.sh
scripts/: convert_model.sh  mdm_preflight.sh  test-swift-bridge.sh
