[workspace]
members = ["pmo-core", "pmo-cli"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Rafael Yilmaz"]
repository = "https://github.com/9t29zhmwdh-coder/private-model-orchestrator"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
