[package]
name        = "pmo-cli"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "Private Model Orchestrator: command-line interface"

[[bin]]
name = "pmo-cli"
path = "src/main.rs"

[dependencies]
pmo-core    = { path = "../pmo-core", features = ["persistence"] }
serde_json  = { workspace = true }
tokio       = { workspace = true }
clap        = { workspace = true }
uuid        = { workspace = true }
