[package]
name        = "pmo-core"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "Private Model Orchestrator — core library"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
