[package]
name        = "pmo-core"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "Private Model Orchestrator: core library"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
ffi = ["uniffi"]
persistence = ["rusqlite", "notify"]

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
uniffi      = { version = "0.32", features = ["cli"], optional = true }
rusqlite    = { workspace = true, optional = true }
notify      = { workspace = true, optional = true }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["ffi"]
